Bug fixed due to not requiring goldfish package.

--- a/GettingStarted.Rmd
+++ b/GettingStarted.Rmd
@@ -65,6 +65,17 @@ Again, do __not__ install packages that need compilation.
 
 Installation will take some time. If it succeeds, it shows the __* DONE (goldfish)__ text (and perhaps some warnings).
 
-On a Mac computer, installation may fail and end with a message that _no suitable compiler(s) were found_ and that you have to install XCode. 
+On a Mac computer, installation may fail and end with a message that _no suitable compiler(s) were found_ and that you have to install XCode.
+
+* Open the Terminal app (via Launchpad).
+* Install Homebrew with the command in Terminal (wait for the command prompt `$` to reappear): `/bin/bash -c "$(curl -fsSL` https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+* Install 'gcc' with the command in Terminal (wait for the command prompt `$` to reappear): `brew install gcc`
+* Copy the location where gcc was installed, something starting with: `/usr/local/` 
+* In Finder, go to `/Library/Frameworks/R.framework/Resources/etc/`, open the file `Makeconf` and replace the lines:
+    + `CC = clang` by `CC = gcc-8`
+    + `CXX = clang++` by `CXX = g++-8`
+    + `FLIBS =  -L/usr/local/gfortran/lib/gcc/` by `FLIBS = -L/usr/local/lib/gcc/8/gcc/x86_64-apple-darwin17.5.0/8.1.0 -L/usr/local/lib/gcc/8 -lgfortran -lquadmath -lm`
+* Close the `Makeconf` file.
+* Close and re-open RStudio and install the goldfish package again (see above). This time, asnwer __Yes__ to the question if you want to install packages that need compilation.
 
 ### That's it!
