--- a/GettingStarted.Rmd
+++ b/GettingStarted.Rmd
@@ -43,6 +43,8 @@ Type (or copy & paste) the following command after the prompt (`>`) in the RStud
 
 This may take some time if many packages are being installed. Wait until you see the message `* DONE (NikitaRocks)`.
 
+Answer with `3` (None) and press the Return/Enter key if R asks you if it should update packages.
+
 Answer __no__ to the question: _Do you want to install from sources the package which needs compilation_. Press the __No__ button if you see a dialog like the one below, or type __no__ and press enter if the question is just written in the RStudio __Console__ tab.
 
 ![](compilation.png)
@@ -66,6 +68,8 @@ Again, do __not__ install packages that need compilation.
 Installation will take some time. If it succeeds, it shows the __* DONE (goldfish)__ text (and perhaps some warnings).
 
 On a Mac computer, installation may fail and end with a message that _no suitable compiler(s) were found_ and that you have to install XCode.
+
+If it fails and you feel comfortable with a non-standard installation procedure, follow these steps:
 
 * Open the Terminal app (via Launchpad).
 * Install Homebrew with the command in Terminal (wait for the command prompt `$` to reappear): `/bin/bash -c "$(curl -fsSL` https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
